--- a/screen-content/home.html
+++ b/screen-content/home.html
@@ -1,7 +1,7 @@
-<h2 class="mdc-typography--headline2" style="text-align: center;">Make Your Mornings Easy With These!</h2>
+<h2 class="mdc-typography--headline2" style="text-align: center;">Decision Fatigue? Goodbye!</h2>
 <h5 class="mdc-typography--headline5" style="text-align: center;"></h5>
 
-<h3 class="mdc-typography--headline3" style="text-align: center;">Since you saved so much time, go visit a coffee job before you start your day! You deserved it!</h3>,
+<h3 class="mdc-typography--headline3" style="text-align: center;"> Make Getting Ready in the Morning as easy as 1,2,3!</h3>,
 
 <ul class="mdc-image-list mdc-image-list--masonry mdc-image-list--with-text-protection">
 	<li class="mdc-image-list__item">
