--- a/screen-content/subscribe.html
+++ b/screen-content/subscribe.html
@@ -1,7 +1,7 @@
 <head>
 
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; text-decoration: none; }
+    * { box-sizing: border-box; margin: 2; padding: 0; text-decoration: none; }
 
     body { min-height: 100%; }
     section { margin: .5rem 0; }
@@ -10,15 +10,15 @@
     /* Documentation Link */
     .documentation { position: fixed; bottom: 10px; right: 10px; background: blue; color: white; border-radius: 3px; padding: .5rem 1rem; }
 
-    #skylineicon {
-      max-width: 30%;
+    #cat {
+      max-width: 50%;
     }
   </style>
 
 <body>
-  <h2 class="mdc-typography--headline2">❤❤❤❤</h2>
-  <h2 class="mdc-typography--headline2">Subsribe to CLA!</h2>
-  <img id="skylineicon" src="./skyline.png" alt="skyline of Chicago icon">
+  <h2 class="mdc-typography--headline2"></h2>
+  <h2 class="mdc-typography--headline2">Join Our Family</h2>
+  <img id="cat" src="cat.png" alt="cat">
 
   <!-- IndexedDB for "mailing list -->
   <section id="mailing-list">
@@ -31,7 +31,7 @@
       <div class="mdc-line-ripple"></div>
     </div>
   </section>
-  <button id="getFormData" class="mdc-button mdc-button--outlined" type="button" name="button">Submit</button>
+  <button id="getFormData" class="mdc-button mdc-button--outlined" type="button" name="button">Join</button>
 
   <script>
     // activate mdc-button
